# CHAI3D_HandExo

./: CHAI3D-VS2015.sln  CMakeLists.txt  README.md
examples/GLFW/: CMakeLists.txt
examples/GLFW/01-HandExo_Cartesian/: 01-HandExo_Cartesian.cpp
examples/GLFW/01-mydevice/: 01-mydevice.cpp
examples/GLFW/02-HandExo_Joint/: 02-HandExo_Joint.cpp
examples/GLFW/03-analytics/: 03-analytics.cpp
examples/GLFW/04-PCA/: 04-PCA.vcxproj  04-PCA.vcxproj.filters
examples/GLFW/04-PCA/Debug/: vc142.idb  vc143.idb
extras/GLFW/: CMakeLists.txt
extras/GLFW/include/GLFW/: DataPacketHandExo.h  DeviceException.h  FingerKinematics.h  ISocket.h  UDPSocket.h
extras/GLFW/lib/Debug/Win32/: glfw.lib
extras/GLFW/lib/Debug/x64/: glfw.lib
extras/GLFW/lib/Release/Win32/: glfw.lib
